# Finance_report

./: .gitignore  README.md  pyproject.toml  requirements.txt
a-share-mcp-is-just-i-need/: mcp_server.py  test_baostock.py
a-share-mcp-is-just-i-need/src/: baostock_data_source.py  utils.py
a-share-mcp-is-just-i-need/src/tools/: stock_market.py
